--- a/assets/css/train.css
+++ b/assets/css/train.css
@@ -53,3 +53,92 @@ footer {
     background-color: black;
     color: white;
 }
+/*---------------------------------------------------------------------------------------------------------------------*/
+/*3D Example*/
+.container {
+    margin: 40px auto;
+    width: 200px;
+    perspective: 400px;
+}
+
+.box {
+    position: relative;
+    width: 100%;
+    height: 200px;
+    /*transform-style: flat; /*default value of this property is flat so the element will be flat and not save its place in 3d space*/
+    transform-style: preserve-3d; /*default value of this property is flat so the element will be flat and not save its place in 3d space*/
+    transition: transform 1s;
+    transform-origin: right center;
+}
+
+.box:hover {
+    transform: translate(-100% )rotateY(-180deg);
+}
+
+.box .face {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-weight: bold;
+    font-size: 30px;
+    color: white;
+
+    backface-visibility: hidden;/* with this property when the element 90 deg flip so it will hide it and not show the backface of it
+    if it's below the 90 deg so it will show it normal*/
+
+
+}
+
+.box .front {
+    background-color: red;
+}
+
+.box .back {
+    background-color: green;
+    transform: rotateY(180deg);  /*here to under stand the backface visibilty property*/
+}
+
+/*---------------------------------------------------------------------------------------------------------------------*/
+/*Animation  Important to understand animation properties especially animation-direction property */
+
+body {
+    background-color: #333;
+}
+
+.load {
+    display: flex;
+    justify-content: center;
+    margin: 50px auto;
+
+}
+
+.load div {
+    width: 20px;
+    height: 20px;
+    background-color: orchid;
+    border-radius: 50%;
+    margin: 0 5px;
+
+    animation-name: up-and-down;
+    animation-duration: 0.9s;
+    animation-iteration-count: infinite;
+
+    animation-direction: alternate;
+}
+
+.load .two {
+    animation-delay: 0.3s;
+}
+.load .three {
+    animation-delay: 0.6s;
+}
+
+@keyframes up-and-down {
+    to {
+        opacity: 0.2;
+        transform: translateY(-20px);
+    }
+}
